--- a/template.html
+++ b/template.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
+    <link rel="stylesheet" href="./css/styles.css" >
 </head>
 
 <body>
